--- a/package.json
+++ b/package.json
@@ -17,6 +17,6 @@
     "pg": "^8.5.1",
     "qrcode": "^1.4.4",
     "socket.io": "2.3.0",
-    "whatsapp-web.js": "latest"
+    "whatsapp-web.js": "^1.20.0"
   }
 }
